[package]
name = "saveFile"
version = "0.1.0"
authors = ["wingdust <995315823@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.8"
webextension-protocol = "0.1.0"
chrono = "0.4"
# chrome_native_messaging = "0.1.2"
serde_json = "~1.0.2"